--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.3.4",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,6 +25,7 @@
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "assemblyscript": "^0.28.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
