--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,21 @@
 {
-  "name": "WASM PWA App",
-  "short_name": "WASMApp",
-  "description": "A demo PWA using Next.js + WebAssembly",
+  "name": "Next.js PWA",
+  "short_name": "NextPWA",
+  "description": "A Progressive Web App built with Next.js",
   "start_url": "/",
-  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#8b5cf6",
-  "orientation": "portrait",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "/icons/icon1.svg",
       "sizes": "192x192",
-      "type": "image/svg"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon1.svg",
       "sizes": "512x512",
-      "type": "image/svg"
+      "type": "image/png"
     }
   ]
 }
