--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,12 @@
     {
       "src": "/icons/logo.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
       "src": "/icons/logo.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
